--- a/divya/FB/package.json
+++ b/divya/FB/package.json
@@ -10,16 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "express-session": "^1.18.0",
     "mongoose": "^8.6.3",
-    "nodemailer": "^6.9.15",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.6"
