--- a/Kashish Mittal/CRUD/package.json
+++ b/Kashish Mittal/CRUD/package.json
@@ -2,19 +2,11 @@
   "name": "nodejs-mysql-crud",
   "version": "1.0.0",
   "main": "index.js",
+  "type" : "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon index .js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.1",
-    "mysql2": "^3.11.4",
-    "nodemon": "^3.1.7"
-  }
+  "description": ""
 }
