--- a/divya/FB/docker-compose.yml
+++ b/divya/FB/docker-compose.yml
@@ -6,6 +6,13 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080" # Map container port to host port
+      - "8080:8080" # Mapping container port to host port
     environment:
-      - MONGO_URI="mongodb+srv://Divya0405:Divya0405@meradb.z2dszqk.mongodb.net/"
+      MONGO_URI : "mongodb+srv://Divya0405:Divya0405@meradb.z2dszqk.mongodb.net/"
+      NODE_ENV: "development"
+
+    volumes:
+      - .:/app
+      - /app/node_modules
+
+    command: "npm start"
